# HeuOpt

./: .gitignore  CMakeLists.txt  README.md
aufgabe 1/: kpmp_instance.cpp  kpmp_solution_writer.h
aufgabe 1/src/: CMakeLists.txt  kpmp_instance.cpp  kpmp_instance.h  kpmp_solution.cpp  kpmp_solution_writer.cpp  main.cpp
framework/: kpmp_instance.h  kpmp_solution_writer.h
instances/: automatic-1.txt  automatic-10.txt  automatic-2.txt  automatic-3.txt  automatic-4.txt  automatic-5.txt  automatic-6.txt  automatic-7.txt  automatic-8.txt  automatic-9.txt  manual-1-overlap.txt  manual-1.txt  manual-6-overlaps.txt  manual-ordering.txt
reports/report1/: report.tex
reports/report2/: report.tex
reports/report3/: report.tex
src/aufgabe1/: caller.py  constructionheuristic.h  greedyconstruction.cpp  greedyconstruction.h  kpmp_solution.cpp  kpmp_solution.h  main.cpp  orderingconstruction.cpp  orderingconstruction.h  utils.cpp  utils.h
src/aufgabe2/: edgeshiftneighborhood.cpp  edgeshiftneighborhood.h  localsearch.cpp  localsearch.h  main.cpp  maxcrossingneighborhood.cpp  maxcrossingneighborhood.h  maxcrossingpageneighborhood.cpp  maxcrossingpageneighborhood.h  minmaxcrossingorderingneighborhood.cpp  minmaxcrossingorderingneighborhood.h  neighborhood.cpp  neighborhood.h  orderingshiftneighborhood.cpp  orderingshiftneighborhood.h
src/aufgabe3/: caller.py  main.cpp  variableneighborhooddescent.cpp  variableneighborhooddescent.h  variableneighborhoodsearch.cpp  variableneighborhoodsearch.h
